# gst-sink

./: CMakeLists.txt  main.cpp  videosink.cpp  videosink.h
